k8s-rewrite/charts/test-stack/whoami/service.yaml
# whoami Service
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: whoami
